--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,7 +1,14 @@
 .robot-container {
+    border: 10px solid rgb(2, 18, 60);
+    border-radius: 50px;
+    margin: auto;
+    width: 60%;
+    height: 50%;
+    background: linear-gradient(to bottom right, rgb(139, 139, 234), rgb(23, 26, 78));
 }
 
 .robot-face-shape {
+
 }
 
 .robot-eye-left {
@@ -20,9 +27,22 @@
 }
 
 .robot-teeth {
+    display: flex;
+    position: relative;
+    top: 250px;
+    /*border: 4px solid;*/
+    border-radius: 50%;
+    width: 70%;
+    height: 65px;
+    margin: auto;
+    overflow: hidden;
 }
 
 .robot-tooth {
+    border: 3px solid black;
+    background-color: whitesmoke;
+    width: 100%;
+    height: 100%;
 }
 
 .robot-hair-style {
