--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -4,7 +4,7 @@
     margin: auto;
     width: 60%;
     height: 50%;
-    background: linear-gradient(to bottom right, rgb(139, 139, 234), rgb(23, 26, 78));
+    background: linear-gradient(to bottom right, rgb(14, 68, 138), rgb(9, 12, 76));
 }
 
 .robot-face-shape {
@@ -12,37 +12,65 @@
 }
 
 .robot-eye-left {
+    position: relative;
+    top: 150px;
+    left: 120px;
+    width: 85px;
+    height: 85px;
+    background-color: rgb(183, 187, 46);
+    border-radius: 10% / 50%;
 }
 
 .robot-eye-right {
+    width: 85px;
+    height: 20px;
+    background-color: red;
+    position: relative;
+    top: 116px;
+    left: 269px;
+
 }
 
 .robot-ear-left {
+    position: absolute;
+    top: 400px;
+    left: 50px;
+    width: 50px;
+    height: 50px;
+    border-right: 60px solid transparent;
+    border-top: 60px solid limegreen;
+    border-left: 60px solid limegreen;
+    border-bottom: 60px solid limegreen;
+    border-top-left-radius: 60px;
+    border-top-right-radius: 60px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
 }
 
 .robot-ear-right {
+    position: absolute;
+    right: 50px;
+    top: 400px;
+    width: 50px;
+    height: 50px;
+    border-right: 60px solid limegreen;
+    border-top: 60px solid limegreen;
+    border-left: 60px solid transparent;
+    border-bottom: 60px solid limegreen;
+    border-top-left-radius: 60px;
+    border-top-right-radius: 60px;
+    border-bottom-left-radius: 60px;
+    border-bottom-right-radius: 60px;
 }
 
 .robot-nose {
 }
 
 .robot-teeth {
-    display: flex;
-    position: relative;
-    top: 250px;
-    /*border: 4px solid;*/
-    border-radius: 50%;
-    width: 70%;
-    height: 65px;
-    margin: auto;
-    overflow: hidden;
 }
 
 .robot-tooth {
-    border: 3px solid black;
-    background-color: whitesmoke;
-    width: 100%;
-    height: 100%;
+
 }
 
 .robot-hair-style {
