--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,13 +1,18 @@
 .robot-container {
-    border: 10px solid rgb(2, 18, 60);
+    border: 10px solid rgb(22 123 255);
     border-radius: 50px;
     margin: auto;
     width: 60%;
     height: 50%;
-    background: linear-gradient(to bottom right, rgb(14, 68, 138), rgb(9, 12, 76));
+    max-width: 500px;
+    min-width: 500px;
+    max-height: 500px;
+    min-height: 500px;
+    background: linear-gradient(to bottom right, rgb(6 14 26), rgb(113 187 230));
 }
 
 .robot-face-shape {
+
 
 }
 
@@ -32,9 +37,9 @@
 }
 
 .robot-ear-left {
-    position: absolute;
-    top: 400px;
-    left: 50px;
+    position: relative;
+    bottom: -40px;
+    left: -125px;
     width: 50px;
     height: 50px;
     border-right: 60px solid transparent;
@@ -48,15 +53,15 @@
 }
 
 .robot-ear-right {
-    position: absolute;
-    right: 50px;
-    top: 400px;
+    position: relative;
+    right: -490px;
+    bottom: 80px;
     width: 50px;
     height: 50px;
-    border-right: 60px solid limegreen;
-    border-top: 60px solid limegreen;
+    border-right: 60px solid pink;
+    border-top: 60px solid pink;
     border-left: 60px solid transparent;
-    border-bottom: 60px solid limegreen;
+    border-bottom: 60px solid pink;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
     border-bottom-left-radius: 60px;
@@ -74,13 +79,33 @@
 }
 
 .robot-hair-style {
+    display: flex;
+    justify-content: space-evenly;
+    position: relative;
+    top: -450px;
+    width: 70%;
+    margin: auto;
+    /*border: 5px solid #999;*/
 }
 
 .robot-hair-one {
+    background-color: darkgreen;
+    width: 40px;
+    height: 50px;
+    position: relative;
+    top: 30px;
 }
 
 .robot-hair-two {
+    background-color: darkorange;
+    width: 40px;
+    height: 60px;
+    position: relative;
+    top: 20px;
 }
 
 .robot-hair-three {
+    background-color: deeppink;
+    width: 40px;
+    height: 80px;
 }
