Completed: fixed header / sticky section labels

--- a/css/fancy-robot.css
+++ b/css/fancy-robot.css
@@ -1,5 +1,5 @@
 .robot-container {
-    border: 10px solid rgb(22 123 255);
+    border: 20px solid rgb(42 113 162);
     border-radius: 50px;
     margin: auto;
     width: 60%;
@@ -12,26 +12,24 @@
 }
 
 .robot-face-shape {
-
-
 }
 
 .robot-eye-left {
     position: relative;
-    top: 150px;
+    top: 115px;
     left: 120px;
-    width: 85px;
+    width: 100px;
     height: 85px;
     background-color: rgb(183, 187, 46);
-    border-radius: 10% / 50%;
+    border-radius: 40% / 80%;
 }
 
 .robot-eye-right {
-    width: 85px;
+    width: 100px;
     height: 20px;
-    background-color: red;
+    background-color: #1b4859;;
     position: relative;
-    top: 116px;
+    top: 75px;
     left: 269px;
 
 }
@@ -39,7 +37,7 @@
 .robot-ear-left {
     position: relative;
     bottom: -40px;
-    left: -125px;
+    left: -140px;
     width: 50px;
     height: 50px;
     border-right: 60px solid transparent;
@@ -54,7 +52,7 @@
 
 .robot-ear-right {
     position: relative;
-    right: -490px;
+    right: -485px;
     bottom: 80px;
     width: 50px;
     height: 50px;
@@ -72,6 +70,9 @@
 }
 
 .robot-teeth {
+
+ /* When I try to position the mouth and teeth, it moves the position of everything else; hair, ears, eyes*/
+
 }
 
 .robot-tooth {
@@ -82,7 +83,7 @@
     display: flex;
     justify-content: space-evenly;
     position: relative;
-    top: -450px;
+    top: -465px;
     width: 70%;
     margin: auto;
     /*border: 5px solid #999;*/
