--- a/css/legal-page.css
+++ b/css/legal-page.css
@@ -1,5 +1,5 @@
 .legal-header {
-  /*z-index: 1;*/
+  z-index: 1;
   position: fixed;
   top: 0;
   background-color: #e2e2e2;
@@ -15,8 +15,10 @@
 }
 
 main {
-  position: relative;
+  position: absolute;
   top: 150px;
+  padding-bottom: 45px;
+  padding-top: 10px;
 }
 
 section {
@@ -60,6 +62,9 @@ section {
 }
 
 footer {
+  z-index: 1;
+  position: fixed;
+  bottom: 0;
   display: flex;
   align-items: center;
   width: 100%;
